--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,5 +5,5 @@ pydantic-settings==2.6.0
 python-multipart==0.0.9
 passlib[bcrypt]==1.7.4
 PyJWT==2.9.0
-aiosqlite==0.20.0
 motor==3.6.0
+email-validator==2.1.1
